# multimind_chat

./: README.md  docker-compose.prod.yml  docker-compose.yml  final-instructions.md  integration-summary.md  vercel.json
.github/: copilot-instructions.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
agent_docs/: final-instructions.md  frontend-backend-flow-documentation.md  integration-summary.md  project-status-report.md
backend/: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  MIGRATION_COMPLETE.md  Makefile  README.md  SUPABASE_INTEGRATION_COMPLETE.md  SUPABASE_MIGRATION_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  logging_config.py  main.py
backend/app/api/v1/: agents.py  chat.py  health.py  test_endpoints.py
backend/app/models/: chat.py
backend/app/repositories/: agent_repo.py  chat_repo.py
backend/app/schemas/: agent.py  chat.py
backend/app/services/: agent_service.py  chat_service.py  llm_service.py
backend/app/utils/: db.py  mention_parser.py  supabase_client.py
backend/docs/: CI_CD_ALIGNMENT.md  PRE_COMMIT_SETUP.md  azure_openai.md  logging.md  supabase.md
backend/migrations/: env.py
backend/migrations/versions/: 4c86ded16fc1_migrate_to_postgresql.py  753d31e7729a_initial_migration.py  94327365becd_initial_migration.py  add_agent_display_fields.py  add_timestamp_to_messages.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: seed_agents.py  setup-precommit.sh
backend/tests/: TEST_SUMMARY.md  conftest.py  conftest_backup.py  run_tests.py
backend/tests/e2e/: test_chat.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent_repo.py  test_agent_service.py  test_api_endpoints.py  test_chat_repo.py  test_chat_service.py  test_config.py  test_config_fixed.py  test_config_fixed_backup.py  test_llm_service.py  test_mention_parser.py  test_openai_client.py  test_schemas.py
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  be_design.md  deploy_plan.md  fe_design.md  phase1.md  plan.md  prd.md
frontend/: .eslintrc.js  .pre-commit-config.yaml  Dockerfile  INTEGRATION_TESTS.md  INTEGRATION_TESTS_SUMMARY.md  README.md  README_TESTS.md  TESTS_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  replit.md  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
frontend/attached_assets/: Pasted--Context-You-are-an-AI-product-engineer-building-the-frontend-for-Multimind-a-multi-persona-1752839767107_1752839767107.txt
frontend/client/src/: index.css
frontend/client/src/__tests__/: App.test.tsx
frontend/client/src/components/: AgentSelector.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/client/src/components/__tests__/: AgentSelector.test.tsx  ChatInput.test.tsx  ChatWindow.test.tsx  MessageBubble.test.tsx
frontend/client/src/hooks/: useAgents.ts  useChat.ts  useMentionParser.ts
frontend/client/src/hooks/__tests__/: useAgents.test.ts  useChat.test.ts  useMentionParser.test.ts
frontend/client/src/lib/__tests__/: queryClient.test.ts  utils.test.ts
frontend/client/src/pages/: chat.tsx
frontend/client/src/pages/__tests__/: chat.test.tsx
frontend/client/src/services/: chatService.ts
frontend/client/src/services/__tests__/: chatService.test.ts
frontend/client/src/test/: integration-setup.ts  setup.ts  test-utils.tsx
frontend/client/src/test/integration/: agents.integration.test.tsx  chat.integration.test.tsx  error-handling.integration.test.tsx  full-flow.integration.test.tsx
frontend/client/src/types/: index.ts
frontend/client/src/utils/: avatarMapping.ts
frontend/e2e/: README.md  accessibility.spec.ts  advanced-flows.spec.ts  agent-interactions.spec.ts  chat-basic-flow.spec.ts  cross-browser.spec.ts  error-scenarios.spec.ts  global-setup.ts  global-teardown.ts  performance.spec.ts  responsive-design.spec.ts  visual-regression.spec.ts
frontend/scripts/: setup-precommit.sh  test-runner.js
frontend/server/: index.ts  routes.ts  storage.ts
frontend/shared/: schema.ts
prompts/: be_creation.md  be_desgin.md  fe_creation.md  fe_design.md
