[project]
name = "multimind-backend"
version = "0.1.0"
description = "Backend for the Multimind AI chat application"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    # Supabase client
    "supabase==2.3.4",
    # PostgreSQL drivers (for Supabase)
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    # SQL Server drivers (for Azure SQL - backward compatibility)
    "pyodbc==5.0.1",
    "aioodbc==0.4.0",
    "pydantic[email]==2.5.3",
    "python-dotenv==1.0.1",
    "openai==1.10.0",
    "httpx>=0.24,<0.26",
    "pydantic-settings>=2.2.1",
    "aiosqlite>=0.19.0",
    "pytest-asyncio>=0.23.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "httpx>=0.24,<0.26",
    "aiosqlite==0.19.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
